--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-mocks": "~1.4",
     "angular-sanitize": "~1.4",
     "angular-toastr": "~1",
-    "angular-ui-router": "~0.2"
+    "angular-ui-router": "~0.2",
+    "angular-moment": "^0.10.3"
   },
   "resolutions": {
     "angular": "~1.4"
