--- a/bower.json
+++ b/bower.json
@@ -2,20 +2,18 @@
   "name": "uql",
   "version": "0.0.0",
   "dependencies": {
+    "angular": "~1.5",
     "animate.css": "~3.4",
-    "angular-animate": "~1.4",
-    "angular-aria": "~1.4",
-    "angular-cookies": "~1.4",
+    "angular-animate": "~1.5",
+    "angular-aria": "~1.5",
+    "angular-cookies": "~1.5",
     "angular-material": "~1.0",
-    "angular-messages": "~1.4",
-    "angular-mocks": "~1.4",
-    "angular-sanitize": "~1.4",
+    "angular-messages": "~1.5",
+    "angular-mocks": "~1.5",
+    "angular-sanitize": "~1.5",
     "angular-toastr": "~1",
     "angular-ui-router": "~0.2",
-    "angular-moment": "^0.10.3",
-    "lodash": "^4.3.0"
-  },
-  "resolutions": {
-    "angular": "~1.4"
+    "moment": "^2.11",
+    "lodash": "~4.6.1"
   }
 }
