--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng-uql",
+  "name": "uql",
   "version": "0.0.0",
   "repository": "git@github.com:uqlibrary/ng-uql.git",
   "license": "MIT",
