--- a/package.json
+++ b/package.json
@@ -11,47 +11,47 @@
     "test:e2e": "gulp protractor"
   },
   "devDependencies": {
+    "browser-sync": "~2.26.7",
+    "browser-sync-spa": "~1.0.3",
+    "chalk": "~2.4.2",
+    "del": "~5.0",
+    "eslint-plugin-angular": "~4.0.1",
     "estraverse": "~4.2.0",
     "gulp": "~3.9.1",
-    "gulp-autoprefixer": "~6.1.0",
+    "gulp-angular-filesort": "~1.2.1",
     "gulp-angular-templatecache": "~3.0.0",
-    "del": "~5.0",
-    "lodash": "~4.17.15",
+    "gulp-autoprefixer": "~6.1.0",
     "gulp-cssnano": "~2.1",
+    "gulp-eslint": "~6.0.0",
     "gulp-filter": "~6.0.0",
     "gulp-flatten": "~0.4.0",
-    "gulp-eslint": "~6.0.0",
-    "eslint-plugin-angular": "~4.0.1",
-    "gulp-load-plugins": "~2.0.0",
+    "gulp-htmlmin": "~5.0",
+    "gulp-inject": "~5.0.4",
+    "gulp-load-plugins": "^2.0.1",
+    "gulp-ng-annotate": "~2.1.0",
+    "gulp-protractor": "~4.1.1",
+    "gulp-rename": "~1.4.0",
+    "gulp-replace": "~1.0.0",
+    "gulp-rev": "~9.0.0",
+    "gulp-rev-replace": "~0.4.4",
+    "gulp-sass": "~4.0.2",
     "gulp-size": "~3.0.0",
+    "gulp-sourcemaps": "~2.6.5",
     "gulp-uglify": "~3.0.2",
     "gulp-useref": "~3.1.6",
     "gulp-util": "~3.0.8",
-    "gulp-ng-annotate": "~2.1.0",
-    "gulp-replace": "~1.0.0",
-    "gulp-rename": "~1.4.0",
-    "gulp-rev": "~9.0.0",
-    "gulp-rev-replace": "~0.4.4",
-    "gulp-htmlmin": "~5.0",
-    "gulp-inject": "~5.0.4",
-    "gulp-protractor": "~4.1.1",
-    "gulp-sourcemaps": "~2.6.5",
-    "gulp-sass": "~4.0.2",
-    "gulp-angular-filesort": "~1.2.1",
-    "main-bower-files": "~2.13.1",
-    "wiredep": "~4.0.0",
+    "http-proxy-middleware": "~0.19.1",
     "karma": "~4.2.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-phantomjs-launcher": "~1.0.4",
-    "phantomjs": "~2.1.7",
     "karma-angular-filesort": "~1.0.2",
     "karma-coverage": "~1.1.2",
+    "karma-jasmine": "~2.0.1",
     "karma-ng-html2js-preprocessor": "~1.0.0",
-    "browser-sync": "~2.26.7",
-    "browser-sync-spa": "~1.0.3",
-    "http-proxy-middleware": "~0.19.1",
-    "chalk": "~2.4.2",
+    "karma-phantomjs-launcher": "~1.0.4",
+    "lodash": "~4.17.15",
+    "main-bower-files": "~2.13.1",
+    "phantomjs": "~2.1.7",
     "uglify-save-license": "~0.4.1",
+    "wiredep": "~4.0.0",
     "wrench": "~1.5.9"
   },
   "engines": {
